src/main/java/org/example/moviesplatform/error/model/UserNotFoundException.java
package org.example.moviesplatform.error.model;

public class UserNotFoundException extends RuntimeException {
    public UserNotFoundException(String message) {
        super(message);
    }
}
